# NotiHub

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  docker-compose-backend.yaml  docker-compose-ci.yml  docker-compose.yaml  logging_config.json  nginx.conf  pyproject.toml
src/: db.py  main.py  settings.py
src/api/: categories.py  channels.py  notifications.py  template_categories.py  templates.py  users.py
src/api/examples/: categories.py  channels.py  notifications.py  templates.py  users.py
src/api/texts/: channels.py  notifications.py  templates.py  users.py
src/bot/: bot.py  main.py
src/bot/common/: texts.py
src/bot/routers/: greetings.py
src/dependencies/: db.py  pagination.py  schedule.py  templates.py  users.py
src/migrations/: env.py
src/migrations/versions/: 2025_08_06_2040-e7e5961cf072_new_template_templatecategory_.py  2025_08_07_0834-99b29d44e46a_new_template_and_templatecategory.py  2025_08_07_0855-4e0e14a100d3_fix_removed_unique_constaint_in_.py  2025_08_08_0900-1dc30970e1df_new_user_and_userchannel_models.py  2025_08_08_1015-4e800ed83317_new_user_and_userchannel_models.py  2025_08_08_1051-e933f7a200d0_new_user_and_userchannel_models.py  2025_08_08_1730-a36645894a72_new_added_roles_for_users.py  2025_08_09_2152-4ac68aa8dded_new_notification_n_nchannel_n_nvariable_.py  2025_08_10_1701-d46d8e75b97e_forgot_added_user_id_to_notification_.py  2025_08_10_1818-19022619da73_forgot_added_cascade_rule_to_.py  2025_08_10_1958-83c4371e7129_new_notificationlog_model.py  (+10 more)
src/models/: __init__.py  base.py  notifications.py  templates.py  users.py
src/repos/: base.py  categories.py  channels.py  notifications.py  scheudles.py  templates.py  users.py
src/schemas/: base.py  categories.py  channels.py  notifications.py  templates.py  users.py
src/services/: base.py  categories.py  channels.py  notifications.py  templates.py  users.py
src/tasks/: app.py  beat.py  extras.py  tasks.py
src/utils/: db_manager.py  enums.py  exceptions.py  notification_helper.py  redis_manager.py
tests/: conftest.py
tests/integration/: test_notifications.py  test_user_channels.py
tests/unit/: test_authentication.py  test_categories.py  test_channels.py  test_templates.py
