[project]
name = "notihub"
version = "0.1.0"
description = ""
authors = [
    {name = "vavlxxx",email = "vladimir.nefedov357@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standart] (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "ruff (>=0.12.7,<0.13.0)",
    "pyright (>=1.1.403,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "redis (>=6.3.0,<7.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "croniter (>=6.0.0,<7.0.0)",
    "aiosmtplib (>=4.0.1,<5.0.0)",
    "fastapi-cache2 (>=0.2.2,<0.3.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "aiogram (>=3.21.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
exclude = ["venv"]
pythonVersion = "3.11.9"
typeCheckingMode = "basic"
reportAssignmentType="none"
reportInvalidStringEscapeSequence="none"
